[gd_scene load_steps=21 format=3 uid="uid://tnw71h266hvk"]

[ext_resource type="AudioStream" uid="uid://c3gy1rd4js2cm" path="res://music and sound/SFX/attack.wav" id="1_j3ehu"]
[ext_resource type="Script" path="res://music and sound/scripts/sound_manager.gd" id="1_lw03a"]
[ext_resource type="AudioStream" uid="uid://d3iv3umrviehb" path="res://music and sound/music/battle.wav" id="2_5rthe"]
[ext_resource type="AudioStream" uid="uid://cby7ghnkyhxhh" path="res://music and sound/SFX/poison_effect.wav" id="3_1y760"]
[ext_resource type="AudioStream" uid="uid://7710i31vponl" path="res://music and sound/SFX/defend_sound.wav" id="3_yj1ch"]
[ext_resource type="AudioStream" uid="uid://bygtyqfkjn0v8" path="res://music and sound/music/boss_loop.wav" id="4_ipihj"]
[ext_resource type="AudioStream" uid="uid://ccylba0ef5hc3" path="res://music and sound/SFX/fire_effect.wav" id="4_mv5dq"]
[ext_resource type="AudioStream" uid="uid://bgv6xey0ov0tm" path="res://music and sound/SFX/alt_select.wav" id="5_qk0sx"]
[ext_resource type="AudioStream" uid="uid://b677tiv7dfltf" path="res://music and sound/SFX/select_button.wav" id="6_4jn0i"]
[ext_resource type="AudioStream" uid="uid://rurke71wogcx" path="res://music and sound/music/boss_intro.wav" id="6_cb1fd"]
[ext_resource type="AudioStream" uid="uid://ccd6ly60cywm8" path="res://music and sound/SFX/autodefense.wav" id="7_mbsuy"]
[ext_resource type="AudioStream" uid="uid://btv6oapfrymec" path="res://music and sound/SFX/defend2.wav" id="7_qa888"]
[ext_resource type="AudioStream" uid="uid://1sv4qe2ywtrq" path="res://music and sound/SFX/select2.wav" id="12_0ln0q"]
[ext_resource type="AudioStream" uid="uid://dy0oglv7fybhp" path="res://music and sound/SFX/select3.wav" id="13_1xwa8"]
[ext_resource type="AudioStream" uid="uid://cms2qbpxusyxr" path="res://music and sound/SFX/autodefense2.wav" id="15_1r8v8"]
[ext_resource type="AudioStream" uid="uid://ce4hreeeepqb2" path="res://music and sound/SFX/heal.wav" id="16_n4dcm"]
[ext_resource type="AudioStream" uid="uid://dvk1p6a66mgs0" path="res://music and sound/SFX/error.wav" id="17_wn01n"]
[ext_resource type="AudioStream" uid="uid://wllmljc7apfy" path="res://music and sound/SFX/lightning_apply.wav" id="18_q564k"]
[ext_resource type="AudioStream" uid="uid://k3ktisipu415" path="res://music and sound/SFX/fire_apply.wav" id="19_nc2eo"]
[ext_resource type="AudioStream" uid="uid://cy8gc7k0k2tw7" path="res://music and sound/SFX/poison_apply.wav" id="20_5uq12"]

[node name="SoundManager" type="Node2D"]
visible = false
script = ExtResource("1_lw03a")

[node name="music" type="Node2D" parent="."]

[node name="BattleMusic" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("2_5rthe")
bus = &"Music"

[node name="BossMusic" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("4_ipihj")
bus = &"Music"

[node name="BossIntro" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("6_cb1fd")
bus = &"Music"

[node name="SFX" type="Node2D" parent="."]

[node name="attack" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("1_j3ehu")
bus = &"SFX"

[node name="defend" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_yj1ch")
bus = &"SFX"

[node name="defend2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_qa888")
bus = &"SFX"

[node name="poison_effect" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_1y760")
bus = &"SFX"

[node name="fire_effect" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_mv5dq")
bus = &"SFX"

[node name="alt_select" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_qk0sx")
bus = &"SFX"

[node name="select" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_4jn0i")
bus = &"SFX"

[node name="select2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("12_0ln0q")
bus = &"SFX"

[node name="select3" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("13_1xwa8")
bus = &"SFX"

[node name="autodefense" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_mbsuy")
bus = &"SFX"

[node name="autodefense2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("15_1r8v8")
bus = &"SFX"

[node name="heal" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("16_n4dcm")
bus = &"SFX"

[node name="error" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("17_wn01n")
bus = &"SFX"

[node name="lightning_apply" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("18_q564k")
bus = &"SFX"

[node name="fire_apply" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("19_nc2eo")
bus = &"SFX"

[node name="poison_apply" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("20_5uq12")
bus = &"SFX"

[connection signal="finished" from="music/BattleMusic" to="." method="_on_battle_music_finished"]
[connection signal="finished" from="music/BossMusic" to="." method="_on_boss_music_finished"]
[connection signal="finished" from="music/BossIntro" to="." method="_on_boss_intro_finished"]
